Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-111433

Pragma (pragma ComponentBehavior: Bound) doesn't allow ListView to be instantiated when section configured within it

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.5.0, 6.5.1, 6.5, 6.6.0
    • 6.5
    • QML: Compiler
    • None
    • 471c909a6 (dev), cef48c0d7 (6.5)

    Description

      The quickcontrol gallery example contains a page for different delegates. The ListView (defined in DelegatePage.qml) loads different delegates have section configured as part of it. 
       
      If we define pragma 'pragma ComponentBehavior: Bound', it doesn't allow ListView to be instatiated when section is configured in it.
       
      Also attached sample file to reproduce this issue.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            fabiankosmale Fabian Kosmale
            santhoshkumar Santhosh Kumar Selvaraj
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes